<resources>
    <string name="app_name">Krishi Mitraa</string>
    <string name="YourFundraise">Your Fundraise</string>
    <string name="YourJobPost">Your Job Post</string>
    <string name="YourPost">Your Post</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="Confirm">Confirm</string>
    <string name="YouwanttoApply">You want to Apply?</string>
    <string name="Youwantlogout">You want to logout?</string>
    <string name="Cancel">Cancel</string>
    <string name="foryou">For you</string>
    <string name="City">City</string>
    <string name="StreetArea">Street/ Area</string>
    <string name="HouseNo.">House No.</string>
    <string name="jobseeker">Job Search</string>
    <string name="Donatee">FPO Fundraiser</string>
    <string name="bottomtab_home">Farmer Chaupal</string>
    <string name="bottomtab_notification">Notification</string>
    <string name="channelPartner">Channel Partner</string>
    <string name="bottomtab_profile">Profile</string>
    <string name="bottomtab_video">Video</string>
    <string name="krishiMitraBajar">Krishi Bazaar</string>
    <string name="appnameonly">Krishi Mitraa</string>
    <string name="login_btn">Login</string>
    <string name="enterpass">Enter Password</string>
    <string name="entermobile">Enter Mobile</string>
    <string name="forgetpass">Forgot Password?</string>
    <string name="registration">Registration</string>
    <string name="signin">Sign Up</string>
    <string name="update">Update</string>
    <string name="job">Job</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="registernow">Register Now</string>
    <string name="confiemotp">Continue</string>
    <string name="resendotp">Resend OTP?</string>
    <string name="demoname">Ayan Khan</string>
    <string name="designation">(Professional)</string>
    <string name="demonotification">commented on your post</string>
    <string name="demoname1">Sahil Khanna</string>
    <string name="democomment">Awesome pic</string>
    <string name="democommentreply">Thanks</string>
    <string name="demotime">2 d</string>
    <string name="reply">Reply</string>
    <string name="demonotitime">23 May at 13:24</string>
    <string name="demotime1">10 h</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="follow">  Follow</string>
    <string name="SendOTP">Send OTP</string>
    <string name="EnterMobile">Enter Mobile</string>
    <string name="forgetpassword">Forget Password                </string>
    <string name="share">2 Share</string>
    <string name="Apply">Apply</string>
    <string name="MyDonations">My Donations</string>
    <string name="demolines">It,s time to revenge.</string>
    <string name="demolikes">10</string>
    <string name="Profile">Profile</string>
    <string name="Search">Search</string>
    <string name="Submit">Submit</string>
    <string name="Verify">Verify OTP</string>
    <string name="democomments">4</string>
    <string name="comments">comments</string>
    <string name="Comments">Comments</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="editprofile">Edit Profile</string>
    <string name="lucknow">Lucknow</string>
    <string name="androiddev">Android Developer</string>
    <string name="company">Digicoders Technologies pvt ltd</string>
    <string name="postdate">Posted 20h</string>
    <string name="experience">     0-1 Years</string>
    <string name="jobdesc">Job Description</string>
    <string name="diploma">Graduation /Diploma</string>
    <string name="hrmanager">Ayan Khan ( HR Manager )</string>
    <string name="commenthint">Write a comment.....</string>
    <string name="search">Search here...</string>
    <string name="address">   Vivek Khand, Gomti Nagar, Lucknow</string>
    <string name="salary">    2-3 LPA</string>
    <string name="eligibility">    Graduation/Diploma</string>
    <string name="requiredcandidate">Required Candidate profile</string>
    <string name="jobtype">Remote Job</string>
    <string name="TermsConditions">Terms &amp; Conditions</string>
    <string name="PrivacyPolicies">Privacy &amp; Policies</string>
    <string name="RefundCancellation">Refund &amp; Cancellation</string>
    <string name="Logout">Logout</string>
    <string name="ApplicantName">Applicant Name</string>
    <string name="Disclaimer">Disclaimer</string>
    <string name="refer">Refer or invite any friend</string>
    <string name="SelectLanguage">Select Language</string>
    <string name="MyDonation">My Donation</string>
    <string name="ShareApp">Share App</string>
    <string name="AddShortVideo">Add Short Video</string>
    <string name="AddJob">Apply for Remote Job</string>
    <string name="AddPost">Add Post</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="OldPassword">Old Password</string>
    <string name="NewPassword">New Password</string>
    <string name="conPassword">Confirm Password</string>
    <string name="Continue">Continue</string>
    <string name="Chat">Chat</string>
    <string name="raised">raised</string>
    <string name="donate">Donate</string>
    <string name="donation">Donation</string>
    <string name="ayan">ayan@</string>
    <string name="goal">Goal : ₹ 3,00,000</string>
    <string name="fields">Excellent communication skills.\n
Strong logical and analytical reasoning skills.\n
Code proficiency with Java, Android SDK, REST &amp; SOAP APIs, Payment Gateways and Video/Audio libraries.\n
Good knowledge of Git practices, Android versions, Android UI/UX, design patterns, code standards and best practices.\n
Familiarity with cloud messaging, In-App purchases and Push notifications.\n
In Depth knowledge about Android Studio.\n
Knowledge of Android Watch and Android TV development is a plus.\n </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AddReel">Add Short Story</string>
    <string name="addstoryhint">Say something about this short video...</string>
    <string name="postbtn">Post</string>
    <string name="permission">Permission                  </string>
    <string name="addfund">Create Farmer FPO</string>
    <string name="FarmerFPOName">Farmer FPO Name</string>
    <string name="FarmerEquipmentName">Equipment ka Name</string>
    <string name="TotalDonationRequired">Total Donation Required</string>
    <string name="Patientage">Patient age</string>
    <string name="UploadPatientImage">Upload Patient Image*</string>
    <string name="desc">Description: </string>
    <string name="donationdesc">Sureshbhai’s name is recognised with much love and reverence by everyone in and around Bhabhar, Gujarat. For over five years now, this man has been the source of happiness and relief for thousands of people who are too poor to afford a single meal. He gives them freshly cooked meals daily and a reason to continue with their lives. But there was a time when Sureshbhai was going through a lot of trouble in his life - he wasn’t sure if he would be able to feed his own family.
    \n
    “As soon as I heard the word cancer, I went blank. I couldn’t hear the other words the doctor was saying anymore. Everything around me was a blur. I can’t explain how shocked we both were. We couldn’t believe that our Kaivalya who was playing and active just a few days ago, was now battling such a dangerous disease.” - Ujwala Bhoir, Mother  </string>
    <string name="lucknowuttarpradesh">Lucknow, Uttar Pradesh</string>
    <string name="Rank">Rank</string>
    <string name="f_p_o_advicer">F.P.O Advicer</string>
    <string name="login_quote">Welcome to Krishi Mitraa</string>
    <string name="otp_heading">Enter the 4 digit OTP code send by us</string>
    <string name="otp_label">Enter Otp</string>
    <string name="newsfeedheading">Select the option related to your problem</string>
    <string name="newsfeedtextoption">Get the diagnosis of the disease by taking photos of it</string>
    <string name="newsFeedSecondOption">Ask questions related to agriculture</string>
    <string name="send_feed">Send Feed</string>
    <string name="fpo_nirman_officer">FPO Construction Officer</string>
    <string name="fpo_prashikhan_officer">FPO Training Officer</string>
    <string name="fpo_nirikhan_officer"> FPO Inspecting Officer</string>
    <string name="fpo_vistar_officer"> FPO Extension Officer</string>
    <string name="fpo_supervisior">FPO Supervisior </string>
    <string name="fpo_manager">FPO Manager</string>
    <string name="fpo_area_manager">FPO Area Manager</string>
    <string name="fpo_jonal_manager">FPO Zonal Manager</string>
    <string name="fpo_regional_manager">FPO Regional Manager</string>
    <string name="fpo_state_head_manager">FPO State Head Manager</string>
    <string name="fpo_country_head_manager">FPO Country Head Manager</string>
    <string name="fpo_directet">FPO Directet</string>
    <string name="fpo_cmd">FPO CMD</string>
    <string name="desc_nirman_officer">FPO Nirman Adhikari has to create 10 FPOs every month from his job code. After joining 10 farmers, one FPO will be made. If you make 120 FPOs in 12 months, you will get promotion after making 120 FPOs.</string>
    <string name="desc_nirikhan_officer">FPO monitoring officer has to monitor the farmers included in his FPO to find out which farmers are active and which farmers are not active and he has to motivate them as per their job code, It is mandatory to make one FPO every month. After 400 new FPO are done by your team you will be promoted</string>
    <string name="desc_prashikhan_officer">FPO Inspecting officer online is to give application to the farmers who are included in FPO and also to inspire the farmers included in their FPO to make another FPO. If you make 240 new FPOs through your old FPO, you will be promoted.</string>
    <string name="desc_vistar_officer">FPO Extension Officer has the task of expanding FPO in his district in which more and more farmers join the company and take training for collective farming. It is mandatory for FPO Extension Officer to create 1 FPO every month from his job code.When 1000 new FPO created with your team. You will be promoted to New Rank</string>
    <string name="desc_supervisior">It is the responsibility of the supervisor to promote his FPO so that more and more FPOs are formed in his team and farmers are added to collective farming. It is mandatory for the FPO supervisor to create 1 FPO every month from his job code. You will be promoted when 2000 new FPOs are created from your old team.</string>
    <string name="desc_manager">FPO manager has the responsibility of promoting his team, hold as many meetings as possible so that your FPO gets promoted and more and more farmers join the company, it is mandatory for the FPO manager to create 1 FPO from his job code every month. You will be promoted once the team creates 4000 new FPOs.</string>
    <string name="desc_area_manager">FPO Area managers will hold online meetings with all their junior managers and motivate them to create more and more FPOs. It is mandatory for the FPO Area Manager to create 1 FPO from his job code every month. You will be promoted once you create 7000 new FPOs from your old team.</string>
    <string name="desc_jonal_manager">FPO zonal manager will hold a meeting with all his FPO area managers, FPO managers and supervisors to make as many FPOs as possible. It is mandatory for the FPO Area Manager to create 1 FPO from his job code every month. You will be promoted once you create 10000 new FPOs from your old team.</string>
    <string name="wallet">Wallet</string>
</resources>