<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"

    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AddPost"
            android:id="@+id/post"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:textSize="15sp"
            android:textColor="@color/darkgreen" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AddJob"
            android:id="@+id/job"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:textSize="15sp"
            android:textColor="@color/darkgreen" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addfund"
            android:id="@+id/donation"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:textSize="15sp"
            android:textColor="@color/darkgreen" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AddShortVideo"
            android:id="@+id/reel"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:textSize="15sp"
            android:textColor="@color/darkgreen" />

    </LinearLayout>

</RelativeLayout>