<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".Activity.Job_fullview_Activity">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="back"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/job"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/top"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="back"
                android:visibility="gone"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:text="@string/androiddev"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/companyname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/signika"
                android:text="@string/company"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/hrmanager"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="normal"
                android:id="@+id/name"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="20dp"
                android:text="@string/postdate"
                android:textColor="@color/grey"
                android:textSize="13dp"
                android:id="@+id/time"
                android:textStyle="normal"
                tools:ignore="SpUsage" />


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                android:backgroundTint="@color/white"

                app:cardElevation="1dp"
                app:strokeColor="@color/grey"
                app:strokeWidth=".5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:drawableStart="@drawable/ic_baseline_backpack_24"
                        android:gravity="center"
                        android:text="@string/experience"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:id="@+id/experience"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:drawableStart="@drawable/ic_baseline_location_on_24"
                        android:gravity="center"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:id="@+id/address"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/packages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:drawableStart="@drawable/ic_baseline_account_balance_wallet_24"
                        android:gravity="center"
                        android:text="@string/salary"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:drawableStart="@drawable/ic_baseline_credit_score_24"
                        android:gravity="center"
                        android:text="@string/eligibility"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:id="@+id/qualification"
                        android:textStyle="normal" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/jobtype"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:id="@+id/jobtype"
                        android:drawableStart="@drawable/ic_baseline_upcoming_24"
                        android:textStyle="normal" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/jobdesc"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="70dp"
                android:backgroundTint="@color/white"

                app:cardCornerRadius="10dp"
                app:cardElevation="1dp"
                app:strokeColor="@color/grey"
                app:strokeWidth=".5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:gravity="center"
                        android:text="@string/requiredcandidate"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:gravity="start"
                        android:text="@string/fields"
                        android:textColor="@color/black"
                        android:textSize="12dp"
                        android:textStyle="normal" />


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:onClick="finish"
        android:text="@string/Apply"
        android:id="@+id/apply"
        android:textColor="@color/white" />

</RelativeLayout>