<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"

    android:layout_height="match_parent"
    tools:context=".Activity.Donation_fullview_Activity">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="back"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/donation"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"

        android:layout_marginBottom="70dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:id="@+id/image"
                android:src="@drawable/patient"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="₹ 2,45,500"
                    android:textColor="@color/black"
                    android:id="@+id/raised"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:layout_marginVertical="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/raised"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="81%"
                    android:textColor="@color/purple_700"
                    android:textSize="18sp"
                    android:id="@+id/percentage"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="10dp"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:id="@+id/goal"
                android:textColor="@color/darkgreen"
                android:textSize="18sp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textColor="@color/black"
                android:layout_marginVertical="20dp"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donationdesc"
                android:textColor="@color/black"
                android:id="@+id/description"
                android:textSize="13sp" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/darkgreen"
        android:text="@string/donate"
        android:id="@+id/donate"
        android:textColor="@color/white"

        android:textStyle="normal" />

</RelativeLayout>